Fix layout issue
The floatThead jquery plugin was causing some layout issues with dropdown
buttons that where positioned on top of it. Because the dropdowns had a
lower z-index they were shown behind the gridview when they where opened.
This is fixed by applying a higher z-index on the dropdowns.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -52,7 +52,8 @@ h1.page-header {
  *  Gridview
  */
 
-.floatThead-wrapper {
+.floatThead-wrapper,
+.kv-thead-float {
     border-top: 1px solid #DDD;
 }
 
@@ -943,4 +944,12 @@ a[data-toggle="tooltip"] {
 
 .duplicateable-container a.copied {
     opacity: 0.3;
+}
+
+
+/**
+ * Bootstrap dropdown buttons
+ */
+.dropdown-menu {
+    z-index: 1100;
 }
